force-app/main/default/objects/CADMV_ZipCodeDirectory__c/CADMV_ZipCodeDirectory__c.object-meta.xml
<CustomObject>
    <description>CADMV object used for collecting all of the zip code mapping for a specific branch office</description>
    <label>Zip Code Directory</label>
    <nameField>
        <displayFormat>ZC-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zip Code Directories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>