force-app/main/default/objects/CADMV_ZipCodeDirectory__c/fields/CADMV_City__c.field-meta.xml
<CustomField>
    <fullName>CADMV_City__c</fullName>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>