force-app/main/default/objects/CADMV_ZipCodeDirectory__c/fields/CADMV_ServiceTerritory__c.field-meta.xml
<CustomField>
    <fullName>CADMV_ServiceTerritory__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Service Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Zip Code Directories</relationshipLabel>
    <relationshipName>CADMV_ZipCodeDirectories</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>