force-app/main/default/objects/CADMV_ZipCodeDirectory__c/fields/CADMV_ZipCode__c.field-meta.xml
<CustomField>
    <fullName>CADMV_ZipCode__c</fullName>
    <label>Zip Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>